--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.12</version>
+				<configuration>
+					<excludes>
+						<exclude>com/openclassrooms/safety_net/model/**/*</exclude>
+						<exclude>com/openclassrooms/safety_net/*.class</exclude>
+					</excludes>
+				</configuration>
 				<executions>
 					<execution>
 						<goals>
