--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
-#spring.datasource.initialization-mode=always
-#spring.sql.init.mode=always
+spring.datasource.initialization-mode=always
+spring.sql.init.mode=always
 spring.sql.init.data-locations=classpath:db.sql
 
 spring.jpa.show-sql = true
